Update 'frx4xr4ek-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe:be43a8e4cbe611c70ac37ad57558432cea995023@sha256:0987a3011f232cf798c0eaecd67dead04ec3c039eb34157998e9fc748a152b37

--- a/components/frx4xr4ek-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/frx4xr4ek-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: frx4xr4ek-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:be43a8e4cbe611c70ac37ad57558432cea995023@sha256:0987a3011f232cf798c0eaecd67dead04ec3c039eb34157998e9fc748a152b37
+          name: container-image
